--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#803c94</color>
-    <color name="colorPrimaryDark">#803c94</color>
-    <color name="colorAccent">#936B9F</color>
+    <color name="colorPrimary">#449747</color>
+    <color name="colorPrimaryDark">#449747</color>
+    <color name="colorAccent">#3DAF41</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_white">#EDE9E9</color>
