mainbinding в mainactivity, подключил кастомный тулбар. т.к homefragment стоит на mainactivity, при oncreate загрузил тулбар. в oncreateview надул разметку, вернул binding.root. в on view created сделал прослушиватель. при нажатии на кнопку навигация на создание таска

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     tools:context=".fragments.HomeFragment">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAddNote"
+        android:id="@+id/fabAddTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tv_no_note_available"
+            android:id="@+id/tv_no_task_available"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
