--- a/app/src/main/res/layout/task_layout_adapter.xml
+++ b/app/src/main/res/layout/task_layout_adapter.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
+    android:background="@color/background_white"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
