--- a/app/src/main/res/layout/task_layout_adapter.xml
+++ b/app/src/main/res/layout/task_layout_adapter.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_white"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:background="@color/white"
         app:cardCornerRadius="5dp"
@@ -17,34 +18,46 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-
-            <TextView
-
-                android:id = "@+id/tvTaskTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text = "Заголовок задачи..."
-                android:textColor = "@color/black"
-                android:textSize = "20sp"
-                android:textStyle = "bold" />
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvTaskTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="200"
+                    android:text="Название задачи"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <View
+                    android:id="@+id/ib_color"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="8dp"
+                    android:gravity="center" />
+
+            </LinearLayout>
 
             <TextView
-
-                android:id = "@+id/tvTaskBody"
+                android:id="@+id/tvTaskBody"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text = "Описание задачи..."
-                android:textColor = "@color/hintColor"
-                android:textSize = "16sp"
-                android:layout_marginTop = "16dp"
-                android:maxHeight = "170dp" />
-
-
+                android:layout_marginTop="16dp"
+                android:maxHeight="170dp"
+                android:text="Описание задачи.."
+                android:textColor="@color/hintColor"
+                android:textSize="16sp" />
         </LinearLayout>
-        
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
